# kv-store

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  build.gradle.kts  maven_install.json  settings.gradle.kts
.github/workflows/: ci.yaml
api/: BUILD.bazel  build.gradle.kts
api/src/main/proto/shaledb/: key_value_store.proto
config/: BUILD.bazel  application.yaml
gradle/wrapper/: gradle-wrapper.properties
server/: BUILD.bazel  build.gradle.kts
server/src/main/java/com/ryszardzmija/shaledb/server/: Application.java
server/src/main/java/com/ryszardzmija/shaledb/server/grpc/: GrpcKeyValueStoreService.java
server/src/test/java/com/ryszardzmija/shaledb/server/grpc/: GrpcKeyValueStoreServiceIntegrationTest.java
src/main/java/com/ryszardzmija/: Application.java  KeyValueStore.java  Main.java
src/main/java/com/ryszardzmija/format/: RecordReadResult.java  RecordReader.java  RecordWriteResult.java  RecordWriter.java
src/main/java/com/ryszardzmija/index/: IndexBuildException.java  IndexBuilder.java
src/main/java/com/ryszardzmija/segment/: SegmentManager.java  SegmentManagerException.java
src/main/java/com/ryszardzmija/segment/files/: SegmentFileDiscoverer.java  SegmentFileDiscoveryException.java  SegmentLayout.java
src/main/java/com/ryszardzmija/segment/loader/: LoadedSegments.java  SegmentLoader.java  SegmentLoadingException.java
src/main/java/com/ryszardzmija/segment/model/: ImmutableSegment.java  MutableSegment.java  SegmentIOException.java  SegmentReader.java  SegmentWriter.java
src/main/java/com/ryszardzmija/segment/rollover/: RolloverException.java  RolloverHandler.java  RolloverPolicy.java  RolloverResult.java  SizeBasedRolloverPolicy.java
src/main/java/com/ryszardzmija/storage/: StorageEngine.java  StorageEngineException.java
src/main/java/com/ryszardzmija/storage/config/: StorageConfig.java
src/main/java/com/ryszardzmija/storage/config/dto/: StorageConfigDto.java
src/main/java/com/ryszardzmija/storage/format/: FormatInfo.java  Record.java  RecordIOException.java  RecordReadResult.java  RecordReader.java  RecordWriteResult.java  RecordWriter.java
src/main/java/com/ryszardzmija/storage/hash/: HashIndexEngine.java
src/main/java/com/ryszardzmija/storage/hash/index/: ByteKey.java  HashIndex.java  Index.java  IndexBuildException.java  IndexBuilder.java
src/main/java/com/ryszardzmija/storage/hash/segment/files/: FileFormatInfo.java  SegmentFileDiscoverer.java  SegmentFileDiscoveryException.java  SegmentFileException.java  SegmentFileFactory.java  SegmentLayout.java
src/main/java/com/ryszardzmija/storage/hash/segment/loader/: LoadedSegments.java  SegmentLoader.java  SegmentLoadingException.java
src/main/java/com/ryszardzmija/storage/hash/segment/model/: ImmutableSegment.java  MutableSegment.java  SegmentIOException.java  SegmentReader.java  SegmentWriter.java
src/main/java/com/ryszardzmija/storage/hash/segment/rollover/: RolloverException.java  RolloverHandler.java  RolloverPolicy.java  RolloverResult.java  SizeBasedRolloverPolicy.java
storage/: BUILD.bazel
storage/src/main/java/com/ryszardzmija/shaledb/storage/: KeyValueStore.java  StorageEngine.java
storage/src/main/java/com/ryszardzmija/shaledb/storage/durability/: DurabilityConfig.java
storage/src/main/java/com/ryszardzmija/shaledb/storage/hash/: HashIndexEngine.java
storage/src/main/java/com/ryszardzmija/shaledb/storage/hash/segment/files/: SegmentFileFactory.java
storage/src/main/java/com/ryszardzmija/shaledb/storage/hash/segment/loader/: SegmentLoader.java
storage/src/main/java/com/ryszardzmija/shaledb/storage/hash/segment/model/: MutableSegment.java  SegmentWriter.java
storage/src/main/java/com/ryszardzmija/shaledb/storage/hash/segment/rollover/: RolloverHandler.java
storage/src/main/java/com/ryszardzmija/shaledb/storage/serialization/io/: RecordWriter.java
storage/src/test/java/com/ryszardzmija/shaledb/storage/config/: StorageConfigMapperTest.java  StorageConfigTest.java
storage/src/test/java/com/ryszardzmija/shaledb/storage/hash/segment/files/: SegmentFileFactoryTest.java
storage/src/test/java/com/ryszardzmija/shaledb/storage/hash/segment/model/: SegmentWriterTest.java
