load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

java_library(
    name = "server_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//api:api",
        "//storage:storage",

        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",

        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "server",
    main_class = "com.ryszardzmija.shaledb.server.Application",
    runtime_deps = [
        ":server_lib",
        "@maven//:ch_qos_logback_logback_classic",
    ],
    data = [
        "//config:application_config",
    ],
)

java_test_suite(
    name = "server_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    runner = "junit5",
    size = "small",
    deps = [
        ":server_lib",
        "//api:api",
        "//storage:storage",

        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_core",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
