load("@rules_java//java:defs.bzl", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

java_library(
    name = "storage",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

java_test_suite(
    name = "storage_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    runner = "junit5",
    size = "small",
    deps = [
        ":storage",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_junit_jupiter",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
